Link changes and formatting

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16573,6 +16573,14 @@ h2.bd-textblock-99 {
   background-color: rgba(0, 0, 0, 0);
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXZpZGVvMTE {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXZpZGVvMTU {}
+.bd-video-15 {
+  display: block !important;
+  max-width: 640px;
+  min-width: 200px;
+  background-color: rgba(0, 0, 0, 0);
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXZpZGVvMTU {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXZpZGVvMg {}
 .bd-video-2 {
   display: block !important;
