New article images compressed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11485,32 +11485,6 @@ a.bd-backtotop-1:hover {
   border-radius: 50%;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWltYWdlbGluazIz {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWltYWdlbGluazI0 {}
-.bd-imagelink-24 {
-  margin-top: 32px;
-  margin-bottom: 25px;
-}
-.bd-imagelink-24 {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-.bd-containereffect-122 {
-  margin-top: 32px;
-  margin-bottom: 25px;
-}
-.bd-imagestyles-19 {
-  vertical-align: middle;
-  display: inline-block;
-  text-align: center;
-  max-width: 100%;
-}
-.bd-imagelink-24 img {
-  vertical-align: middle;
-  display: inline-block;
-  text-align: center;
-  max-width: 100%;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWltYWdlbGluazI0 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWltYWdlbGluazI4 {}
 .bd-imagestyles-22 {
   vertical-align: middle;
@@ -14309,10 +14283,11 @@ h2.bd-postheader-5 a {
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24xMw {}
 .bd-section-13 {
   height: 80vh;
-  background-image: url(../../assets/images/93b97e9f99ba7cb23ac11a7f579479be_ultimateguideseoredesigns.png);
+  background-image: url(https://smartsprout.co.uk/images/ultimate-guide-seo-redesigns.png);
   background-repeat: repeat;
   background-attachment: scroll;
   background-position: center center;
+  background-size: cover;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24xMw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24xNA {}
@@ -16504,7 +16479,7 @@ h2.bd-textblock-26 {
 }
 .bd-containereffect-118 {
   margin-top: 32px;
-  margin-bottom: 32px;
+  margin-bottom: 0px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazI5OA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazI5OQ {}
@@ -16516,7 +16491,7 @@ h2.bd-textblock-26 {
   margin-top: 0;
 }
 .bd-containereffect-120 {
-  margin-top: 25px;
+  margin-top: 0px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMwMA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMwMg {}
